# MIDL-complier

./: .gitignore  CMakeLists.txt  readme.md
MIDL-parser/: .gitignore  CMakeLists.txt  Parser.cpp  Parser.h  SyntaxTreeNode.cpp  SyntaxTreeNode.h  main.cpp  readme.md
MIDL-parser/test/: test15_complex.txt
MIDL-parser/test/base_type_spec/: test10_with_error.txt  test9.txt
MIDL-parser/test/declarators/: test11.txt  test12_with_error.txt
MIDL-parser/test/expr/: test13.txt  test14_with_error.txt
MIDL-parser/test/member_list/: test3.txt  test4_with_error.txt  test5_with_error.txt
MIDL-parser/test/struct_type/: test0.txt  test1_with_error.txt  test2_with_error.txt
MIDL-parser/test/type_spec/: test6.txt  test7_with_error.txt  test8_with_error.txt
MIDL-parser/test/zys_test/: test1.txt  test2.txt  test3.txt  test4.txt
MIDL-parser/utils/: SyntaxType.h
MIDL-scanner/: .gitignore  CMakeLists.txt  DFA.h  Scanner.cpp  Scanner.h  main.cpp  readme.md
MIDL-scanner/drawio/: ID.drawio  INTEGER.drawio  STRING.drawio  词法分析.drawio
MIDL-scanner/test/: test_1_kw.txt  test_2_kw.txt  test_3_formula.txt  test_4_identifier.txt  test_5_identifier_with_error.txt  test_6_identifier_with_error.txt  test_7_expression.txt  test_8_complex.txt  test_9_complex_with_escape.txt  zys_test_all.txt  zys_test_boolean.txt  zys_test_id.txt  zys_test_integer.txt  zys_test_string.txt
MIDL-scanner/utils/: ErrorMsgBuilder.cpp  ErrorMsgBuilder.h  Keyword.cpp  Keyword.h  TokenType.h
